[gd_scene load_steps=13 format=3 uid="uid://6iqd0ym41fgo"]

[ext_resource type="Script" path="res://city_mode/Cities/Crowmvood/Crowmvood.gd" id="1_bcicu"]
[ext_resource type="Texture2D" uid="uid://dlvrvoxv04o4m" path="res://city_mode/Cities/Assets/Geraldinia_0.png" id="2_cou1p"]
[ext_resource type="Texture2D" uid="uid://t7ukvod3pjr1" path="res://city_mode/Cities/Assets/Geraldinia_road.png" id="3_kfig2"]
[ext_resource type="Texture2D" uid="uid://bwiu4xmfedlef" path="res://city_mode/Cities/Assets/Geraldinia_shop_0.png" id="4_paxok"]
[ext_resource type="Texture2D" uid="uid://8nm7q5k4a66k" path="res://city_mode/Cities/Assets/Geraldinia_shop_1.png" id="5_0vkre"]
[ext_resource type="Texture2D" uid="uid://ddb8hbfesc0l8" path="res://city_mode/Cities/Assets/Geraldinia_prilav.png" id="6_2wfi6"]
[ext_resource type="Texture2D" uid="uid://bprnl1hqncimr" path="res://city_mode/Cities/Assets/Geraldinia_prodav.png" id="7_4crtd"]
[ext_resource type="Texture2D" uid="uid://cbedbpjj3nvgi" path="res://city_mode/Cities/Assets/Geraldinia_kuzna.png" id="8_vajd3"]
[ext_resource type="Texture2D" uid="uid://driq1yr2csc7w" path="res://city_mode/Cities/Assets/Geraldinia_1.png" id="9_vn7mw"]
[ext_resource type="PackedScene" uid="uid://cal6f73hk5ff7" path="res://city_mode/Cities/trading/trading.tscn" id="10_oo5fk"]
[ext_resource type="PackedScene" uid="uid://cd1lm7663kkqk" path="res://city_mode/Cities/crafting/crafting.tscn" id="11_317om"]
[ext_resource type="PackedScene" uid="uid://kn0koccqa28q" path="res://GUI/inventory/inventory_gui.tscn" id="12_xps8m"]

[node name="CityMap" type="Node2D"]
script = ExtResource("1_bcicu")

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
offset_left = 106.0
offset_top = 39.0
offset_right = 583.0
offset_bottom = 332.0
text = "TODO
this is a singleton scene for city
you should implement 
 - city changer
 - add return to the start map"

[node name="backgraund" type="Sprite2D" parent="."]
position = Vector2(480, 273)
scale = Vector2(4.13333, 4.07407)
texture = ExtResource("2_cou1p")

[node name="GeraldiniaRoad" type="Sprite2D" parent="."]
position = Vector2(475.5, 270.5)
scale = Vector2(4.09583, 4.08148)
texture = ExtResource("3_kfig2")

[node name="trading" type="Node2D" parent="."]

[node name="GeraldiniaShop0" type="Sprite2D" parent="trading"]
position = Vector2(529, 262.437)
scale = Vector2(3.65, 3.91759)
texture = ExtResource("4_paxok")

[node name="GeraldiniaShop1" type="Sprite2D" parent="trading"]
position = Vector2(504.25, 263)
scale = Vector2(3.96875, 3.28889)
texture = ExtResource("5_0vkre")

[node name="GeraldiniaPrilav" type="Sprite2D" parent="trading"]
position = Vector2(534, 246.25)
scale = Vector2(3.39167, 3.45556)
texture = ExtResource("6_2wfi6")

[node name="GeraldiniaProdav" type="Sprite2D" parent="trading"]
position = Vector2(583, 268)
scale = Vector2(2.55313, 2.87037)
texture = ExtResource("7_4crtd")

[node name="Button" type="Button" parent="trading"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = 604.0
offset_top = 137.0
offset_right = 894.0
offset_bottom = 437.0

[node name="crafting" type="Node2D" parent="."]

[node name="GeraldiniaKuzna" type="Sprite2D" parent="crafting"]
position = Vector2(467.5, 233.312)
scale = Vector2(3.94583, 3.56018)
texture = ExtResource("8_vajd3")

[node name="Button" type="Button" parent="crafting"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = 95.0
offset_top = 146.0
offset_right = 352.0
offset_bottom = 457.0
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Node2D" parent="."]
position = Vector2(465, 313)
scale = Vector2(2.17917, 2.37037)

[node name="Geraldinia1" type="Sprite2D" parent="Exit"]
texture = ExtResource("9_vn7mw")

[node name="Button" type="Button" parent="Exit"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = -14.0
offset_top = -18.0
offset_right = 14.0
offset_bottom = 24.0

[node name="Trading" parent="." instance=ExtResource("10_oo5fk")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Crafting" parent="." instance=ExtResource("11_317om")]
visible = false
anchors_preset = 10
anchor_bottom = 0.0
offset_left = 820.0
offset_top = 397.0
offset_right = 1074.0
offset_bottom = 644.0
grow_vertical = 1

[node name="InventoryGUI" parent="." instance=ExtResource("12_xps8m")]
offset_left = 481.0
offset_top = 232.0
offset_right = 481.0
offset_bottom = 232.0

[connection signal="pressed" from="trading/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="trading/Button" to="." method="_on_button_trading_pressed"]
[connection signal="pressed" from="trading/Button" to="Trading" method="_on_button_pressed"]
[connection signal="pressed" from="crafting/Button" to="." method="_on_button_crafting_pressed"]
[connection signal="pressed" from="crafting/Button" to="Crafting" method="_on_button_pressed"]
[connection signal="pressed" from="Exit/Button" to="." method="_on_button_exit_pressed"]
